crates/mako/src/transformers/snapshots/mako__transformers__transform_react__tests__normal_module_with_react_refresh.snap
---
source: crates/mako/src/transformers/transform_react.rs
expression: "transform(TransformTask {\n        code: \"export default function R(){return <h1></h1>}\".to_string(),\n        is_entry: false,\n        path: \"index.jsx\".to_string(),\n    })"
---
import * as RefreshRuntime from 'react-refresh';
var prevRefreshReg;
var prevRefreshSig;
prevRefreshReg = window.$RefreshReg$;
prevRefreshSig = window.$RefreshSig$;
window.$RefreshReg$ = (type, id)=>{
    RefreshRuntime.register(type, module.id + id);
};
window.$RefreshSig$ = RefreshRuntime.createSignatureFunctionForTransform;
import { jsxDEV as _jsxDEV } from "react/jsx-dev-runtime";
export default function R() {
    return _jsxDEV("h1", {}, void 0, false, {
        fileName: "<<jsx-config-pragmaFrag.js>>",
        lineNumber: 1,
        columnNumber: 16
    }, this);
}
_c = R;
var _c;
$RefreshReg$(_c, "R");
window.$RefreshReg$ = prevRefreshReg;
window.$RefreshSig$ = prevRefreshSig;
function $RefreshIsReactComponentLike$(moduleExports) {
    if (RefreshRuntime.isLikelyComponentType(moduleExports.default || moduleExports)) {
        return true;
    }
    var hasComponentExports = false;
    for(var key in moduleExports){
        if (RefreshRuntime.isLikelyComponentType(moduleExports[key])) {
            hasComponentExports = true;
        }
    }
    return hasComponentExports;
}
if ($RefreshIsReactComponentLike$(module.exports)) {
    module.meta.hot.accept();
    RefreshRuntime.performReactRefresh();
}
